changes to token listing form

--- a/site/layouts/token-sales/list.html
+++ b/site/layouts/token-sales/list.html
@@ -6,7 +6,7 @@
 
 	<div class="container">
 		<div class="top-links">
-			<a href="/news/what-is-an-ico"><svg class="icon"><use xlink:href="#chip" /></svg> Token sale course</a>
+			<a href="/crypto-101/token/tokenisation/"><svg class="icon"><use xlink:href="#chip" /></svg> Token sale course</a>
 			<a href="/news/things-to-know-ico"><svg class="icon"><use xlink:href="#bulb" /></svg> 8 things to know</a>
 			<a href="/variable-description"><svg class="icon"><use xlink:href="#gear" /></svg> Variable Description</a>
 			<a href="/rating-framework"><svg class="icon"><use xlink:href="#document" /></svg>Rating Framework</a>
