--- a/src/scss/pages/_token-sales-single.scss
+++ b/src/scss/pages/_token-sales-single.scss
@@ -17,7 +17,7 @@
 		.info-main {
 			margin-top: 30px;
 			display: flex;
-			justify-content: center;
+			justify-content: space-between;
 			@include media-breakpoint-down(sm) {
 				flex-wrap: wrap-reverse;
 			}
