small changes to landing and token sale pages

--- a/site/layouts/token-sales/list.html
+++ b/site/layouts/token-sales/list.html
@@ -20,7 +20,7 @@
 	      <tr>
 	        <th>ICO</th>
 	        <th>Valuation</th>
-	        <th>% ICO</th>
+	        <th>ICO/Total</th>
 	        <th>Start</th>
 	        <th>End</th>
 	        <th>Rating</th>
