one news + changes scorum date + fixed relationship bug on tokensale-single

--- a/site/layouts/token-sales/single.html
+++ b/site/layouts/token-sales/single.html
@@ -310,7 +310,7 @@
 													<div>Crypto influencers</div>
 												</div>
 												<div class="col-6">
-													<svg class="icon"><use xlink:href="{{ if .Params.setUp.relationships.cryptoInfluencers }}#yes{{ else }}#no{{ end }}" /></svg>
+													<svg class="icon"><use xlink:href="{{ if .Params.setUp.partnerships.cryptoInfluencers }}#yes{{ else }}#no{{ end }}" /></svg>
 												</div>
 											</div>
 											<div class="row">
@@ -318,7 +318,7 @@
 													<div>Mainstream media</div>
 												</div>
 												<div class="col-6">
-													<svg class="icon"><use xlink:href="{{ if .Params.setUp.relationships.mainstreamMedia }}#yes{{ else }}#no{{ end }}" /></svg>
+													<svg class="icon"><use xlink:href="{{ if .Params.setUp.partnerships.mainstreamMedia }}#yes{{ else }}#no{{ end }}" /></svg>
 												</div>
 											</div>
 											<div class="row">
@@ -326,7 +326,7 @@
 													<div>Smart money investor</div>
 												</div>
 												<div class="col-6">
-													<svg class="icon"><use xlink:href="{{ if .Params.setUp.relationships.smartMoneyInvestors }}#yes{{ else }}#no{{ end }}" /></svg>
+													<svg class="icon"><use xlink:href="{{ if .Params.setUp.partnerships.smartMoneyInvestors }}#yes{{ else }}#no{{ end }}" /></svg>
 												</div>
 											</div>
 											<div class="row">
@@ -334,7 +334,7 @@
 													<div>Corporate partners</div>
 												</div>
 												<div class="col-6">
-													<svg class="icon"><use xlink:href="{{ if .Params.setUp.relationships.corporatePartners }}#yes{{ else }}#no{{ end }}" /></svg>
+													<svg class="icon"><use xlink:href="{{ if .Params.setUp.partnerships.corporatePartners }}#yes{{ else }}#no{{ end }}" /></svg>
 												</div>
 											</div>
 										</div>
