adds tips partial to content pages

--- a/site/layouts/crypto-101/list.html
+++ b/site/layouts/crypto-101/list.html
@@ -23,6 +23,7 @@
 			</div>
 		</div>
 	</div>
+	{{ partial "tip-bleed" . }}
 {{ else }}
 	<div class="crypto-101">
 		<div class="container">
@@ -41,6 +42,7 @@
 			</div>
 		</div>
 	</div>
+	{{ partial "tip-bleed" . }}
 {{ end }}
 
 {{ end }}
