--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,6 +21,7 @@
 @import 'components/rating-framework-tables';
 @import 'components/roadmap-timeline';
 @import 'components/development-timeline';
+@import 'components/tip-bleed';
 @import 'pages/landing';
 @import 'pages/news-list';
 @import 'pages/news-single';
