--- a/site/layouts/crypto-101/single.html
+++ b/site/layouts/crypto-101/single.html
@@ -26,7 +26,7 @@
 				  <a href="{{ .NextInSection.URL }}"><i class="fa fa-chevron-right" aria-hidden="true"></i> Next</a>
 				{{ end }}
 			</div>
-
+		{{ partial "tip-bleed" . }}
   	</div>
   </div>
 
