--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -30,6 +30,12 @@ strong {
   strong {
   	font-size: 1.1rem;
   }
+
+  blockquote {
+    background-color: whitesmoke;
+    border-left: 5px solid theme-color("primary");
+    padding: 0.75em 1em;
+  }
 }
 
 button {
