changes rating to out of 10 and removes percentage sign

--- a/site/layouts/token-sales/single.html
+++ b/site/layouts/token-sales/single.html
@@ -20,7 +20,7 @@
 							<p>{{ .Description }}</p>
 						</div>
 						<div>
-							<div class="rating">{{ if ne .Params.rating "N/A" }}{{ .Params.rating }}%{{ else }}{{ .Params.rating }}{{ end }}</div>
+							<div class="rating">{{ if ne .Params.rating "N/A" }}{{ .Params.rating }}{{ else }}{{ .Params.rating }}{{ end }}</div>
 						</div>
 					</div>
 				</div>
