--- a/site/layouts/token-sales/list.html
+++ b/site/layouts/token-sales/list.html
@@ -46,7 +46,7 @@
 		        <td>{{ .Params.startDate | dateFormat "02 Jan 06" }}</td>
 	          <td>{{ .Params.endDate | dateFormat "02 Jan 06" }}</td>
 	          {{ if ne .Params.rating "N/A" }}
-	          	<td data-order="{{ .Params.rating }}" class="rating">{{ .Params.rating }}%</td>
+	          	<td data-order="{{ .Params.rating }}" class="rating">{{ .Params.rating }}</td>
 	          {{ else }}
 	          	<td data-order="0" class="rating">N/A</td>
 	          {{ end }}
