changes landing hero, redesigns news single, adds related news

--- a/site/layouts/partials/news-sidebar.html
+++ b/site/layouts/partials/news-sidebar.html
@@ -5,7 +5,7 @@
 			<a href="https://www.facebook.com/{{.Site.Params.facebook}}" target="_blank"><img src="/images/social-media/facebook.svg"></a>
 			<a href="https://twitter.com/{{.Site.Params.twitter}}" target="_blank"><img src="/images/social-media/twitter.svg"></a>
 		</div>
-		<p>Get free ICO reports & the hottest crypto news</p>
+		<p>Get hottest crypto news and insights</p>
 		<div class="newsletter-form">
 			{{ partial "newsletter-form" . }}
 		</div>
