--- a/site/layouts/news/single.html
+++ b/site/layouts/news/single.html
@@ -5,7 +5,7 @@
 
 <div class="news-single">
 	<div class="container">
-	  <div class="row">
+	  <div class="row justify-content-center">
 	  	<div class="col-lg-8">
 		  	<div class="article-detail">
 					{{ template "_internal/schema.html" . }}
@@ -37,6 +37,28 @@
 	            {{ partial "article/related-content" . }}
 	        </div>
 
+	        <div class="d-flex justify-content-around">
+	        	<iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Ftropyc%2F&width=178&layout=button_count&action=like&size=large&show_faces=true&share=true&height=46&appId=705265652991177" width="178" height="46" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+	        	<a class="twitter-follow-button"
+							href="https://twitter.com/tropyc_crypto"
+							data-size="large">
+						Follow @tropyc_crypto</a>
+	        </div>
+					<div>
+						<p class="text-center font-weight-bold">Get hottest crypto news and insights</p>
+						{{ partial "newsletter-inline-form" . }}
+					</div>
+
+	        {{ $related := .Site.RegularPages.RelatedIndices . "date" | first 5 }}
+					{{ with $related }}
+					<h3>See Also</h3>
+					<ul>
+						{{ range . }}
+						<li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
+						{{ end }}
+					</ul>
+					{{ end }}
+
 	        {{ if .Site.DisqusShortname }}
 	        <div class="disqus">
 	            {{ template "_internal/disqus.html" . }}
@@ -44,9 +66,6 @@
 	        {{ end }}
 
 				</div>
-	  	</div>
-	  	<div class="col-lg-4 col-md-12">
-	  		{{ partial "news-sidebar" . }}
 	  	</div>
 	  </div>
 	</div>
