adds google analytics outbound link tracking

--- a/site/layouts/_default/baseof.html
+++ b/site/layouts/_default/baseof.html
@@ -26,7 +26,7 @@
   <!-- Site verification -->
   {{ if .IsHome }} {{ partial "site-verification" . }} {{ end }}
   <!-- add googleAnalytics in config.toml -->
-  {{ template "_internal/google_analytics_async.html" . }}
+  {{ partial "google_analytics_async.html" . }}
   {{ if .RSSLink }} <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" /> {{ end }}
 
   <link rel="canonical" href="{{ .Permalink }}">
